tests/snapshots/render_snapshots__narrow-table-40.snap
---
source: tests/render_snapshots.rs
expression: tree.to_plain_text()
---
Narrow Table
════════════

┌───┬───┐
│ K │ V │
├───┼───┤
│ a │ 1 │
│ b │ 2 │
│ c │ 3 │
└───┴───┘

With alignment:

┌──────┬────────┬───────┐
│ Left │ Center │ Right │
├──────┼────────┼───────┤
│ l    │   c    │     r │
│ long │  mid   │    42 │
└──────┴────────┴───────┘

Single column:

┌──────┐
│ Only │
├──────┤
│ one  │
│ two  │
└──────┘
