tests/snapshots/render_snapshots__nested-lists-80.snap
---
source: tests/render_snapshots.rs
expression: tree.to_plain_text()
---
Nested Lists
════════════

Unordered
─────────

• fruit
  ◦ apples
    ▪ granny smith
    ▪ honeycrisp
  ◦ bananas
• vegetables
  ◦ carrots
  ◦ kale

Ordered
───────

1. first step
2. second step
   1. sub-step a
   2. sub-step b
      1. deeper still
3. third step

Mixed and loose
───────────────

1. ordered outer

   with a second paragraph inside the item
   ◦ unordered inner
   ◦ another inner

     nested paragraph under a bullet
2. back at the top level

Task lists
──────────

• ☑ write the parser
• ☑ build sections
• ☐ layout engine
    ◦ ☑ paragraphs
    ◦ ☐ tables
• ☐ release 1.0

List with code and quote
────────────────────────

• item with code:

  ▏ echo hello
• item with quote:

  ▌ quoted inside a list item
